Ocultado parte do NIS dos deferidos

--- a/Relatórios Isensys/Reports/Edital.jrxml
+++ b/Relatórios Isensys/Reports/Edital.jrxml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- Created with Jaspersoft Studio version 6.16.0.final using JasperReports Library version 6.16.0-48579d909b7943b64690c65c71e07e0b80981928  -->
+<!-- Created with Jaspersoft Studio version 6.20.5.final using JasperReports Library version 6.20.5-3efcf2e67f959db3888d79f73dde2dbd7acb4f8e  -->
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="Edital" pageWidth="595" pageHeight="842" columnWidth="555" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="78698fe4-ba81-48be-9d34-a2158f025af4">
 	<property name="com.jaspersoft.studio.data.defaultdataadapter" value="Retornos"/>
 	<property name="com.jaspersoft.studio.report.description" value="Relatório do Edital de resultado de solicitações de isenção do sistema IsenSys. Atualizado em 11/03/2020."/>
@@ -266,7 +266,7 @@
 								<textField>
 									<reportElement style="Corpo Tabela (Centro)" x="0" y="0" width="100" height="20" uuid="dfac6169-bc8e-4b06-baf8-0a2174c43eed"/>
 									<textElement verticalAlignment="Middle"/>
-									<textFieldExpression><![CDATA[$F{nis}]]></textFieldExpression>
+									<textFieldExpression><![CDATA[($F{motivo} == 0) ? String.format("%s.*****.*%s-%s", $F{nis}.substring(0, 3), $F{nis}.substring(9, 10), $F{nis}.substring(10)) : $F{nis}]]></textFieldExpression>
 								</textField>
 							</jr:detailCell>
 						</jr:column>
