--- a/Relatórios Isensys/Reports/Resultado.jrxml
+++ b/Relatórios Isensys/Reports/Resultado.jrxml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- Created with Jaspersoft Studio version 6.20.5.final using JasperReports Library version 6.20.5-3efcf2e67f959db3888d79f73dde2dbd7acb4f8e  -->
+<!-- Created with Jaspersoft Studio version 6.20.6.final using JasperReports Library version 6.20.6-5c96b6aa8a39ac1dc6b6bea4b81168e16dd39231  -->
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="Edital" pageWidth="595" pageHeight="842" columnWidth="555" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="78698fe4-ba81-48be-9d34-a2158f025af4">
 	<property name="com.jaspersoft.studio.data.defaultdataadapter" value="Retornos"/>
 	<property name="com.jaspersoft.studio.report.description" value="Relatório do Edital de resultado de solicitações de isenção do sistema IsenSys. Atualizado em 11/03/2020."/>
@@ -134,7 +134,7 @@
 				</reportElement>
 				<textFieldExpression><![CDATA["RESULTADO " + $P{PAR_TIPO_RESULTADO} + " DA SOLICITAÇÃO DE ISENÇÃO DA TAXA DE INSCRIÇÃO"]]></textFieldExpression>
 			</textField>
-			<textField>
+			<textField textAdjust="ScaleFont">
 				<reportElement style="Títulos" x="0" y="90" width="555" height="15" uuid="a45a67d2-bef5-406f-8daa-8f4dc839afa1">
 					<property name="com.jaspersoft.studio.unit.height" value="px"/>
 					<property name="com.jaspersoft.studio.unit.y" value="px"/>
@@ -216,7 +216,8 @@
 					<property name="com.jaspersoft.studio.unit.y" value="px"/>
 					<property name="com.jaspersoft.studio.unit.height" value="px"/>
 				</reportElement>
-				<text><![CDATA[O Cadastro Único (CadÚnico) está regulamentado pelo Decreto nº 6.135/2007 e pelo Decreto nº 6.593/2008.]]></text>
+				<textElement textAlignment="Justified" markup="html"/>
+				<text><![CDATA[O Cadastro Único (CadÚnico) está regulamentado pelo <span style='color: #1E90FF; text-decoration: underline'><a href="https://www.planalto.gov.br/ccivil_03/_ato2007-2010/2008/decreto/d6593.htm">Decreto nº 6.593/2008</a></span> e pelo <span style='color: #1E90FF; text-decoration: underline'><a href="https://www.planalto.gov.br/ccivil_03/_Ato2019-2022/2022/Decreto/D11016.htm">Decreto nº 11.016/2022</a></span>.]]></text>
 			</staticText>
 		</band>
 	</title>
