--- a/Relatórios Isensys/Reports/Resultado.jrxml
+++ b/Relatórios Isensys/Reports/Resultado.jrxml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- Created with Jaspersoft Studio version 6.20.6.final using JasperReports Library version 6.20.6-5c96b6aa8a39ac1dc6b6bea4b81168e16dd39231  -->
+<!-- Created with Jaspersoft Studio version 6.21.2.final using JasperReports Library version 6.21.2-8434a0bd7c3bbc37cbf916f2968d35e4b165821a  -->
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="Edital" pageWidth="595" pageHeight="842" columnWidth="555" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="78698fe4-ba81-48be-9d34-a2158f025af4">
 	<property name="com.jaspersoft.studio.data.defaultdataadapter" value="Retornos"/>
 	<property name="com.jaspersoft.studio.report.description" value="Relatório do Edital de resultado de solicitações de isenção do sistema IsenSys. Atualizado em 11/03/2020."/>
@@ -274,7 +274,7 @@
 								<textField>
 									<reportElement style="Corpo Tabela (Centro)" x="0" y="0" width="85" height="20" uuid="dfac6169-bc8e-4b06-baf8-0a2174c43eed"/>
 									<textElement verticalAlignment="Middle"/>
-									<textFieldExpression><![CDATA[($F{motivo} == 0) ? $F{NISOculto} : $F{NIS}]]></textFieldExpression>
+									<textFieldExpression><![CDATA[($F{situacao} == 'S') ? $F{NISOculto} : $F{NIS}]]></textFieldExpression>
 								</textField>
 							</jr:detailCell>
 						</jr:column>
@@ -338,7 +338,7 @@
 							<jr:detailCell style="Table 1_TD" height="20">
 								<textField>
 									<reportElement style="Corpo Tabela (Centro)" x="0" y="0" width="60" height="20" uuid="51c6609f-fae8-48a2-bbbe-b8cd2080cc49"/>
-									<textFieldExpression><![CDATA[($F{motivo} == 0) ? "" : $F{motivo}]]></textFieldExpression>
+									<textFieldExpression><![CDATA[($F{situacao} == 'S') ? "" : $F{motivo}]]></textFieldExpression>
 								</textField>
 							</jr:detailCell>
 						</jr:column>
