--- a/Relatórios Isensys/Reports/Resultado.jrxml
+++ b/Relatórios Isensys/Reports/Resultado.jrxml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!-- Created with Jaspersoft Studio version 6.21.2.final using JasperReports Library version 6.21.2-8434a0bd7c3bbc37cbf916f2968d35e4b165821a  -->
-<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="Edital" pageWidth="595" pageHeight="842" columnWidth="555" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="78698fe4-ba81-48be-9d34-a2158f025af4">
+<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="Resultado" pageWidth="595" pageHeight="842" columnWidth="555" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="78698fe4-ba81-48be-9d34-a2158f025af4">
 	<property name="com.jaspersoft.studio.data.defaultdataadapter" value="Retornos"/>
 	<property name="com.jaspersoft.studio.report.description" value="Relatório do Edital de resultado de solicitações de isenção do sistema IsenSys. Atualizado em 11/03/2020."/>
 	<style name="Table_TH" mode="Opaque" backcolor="#F0F8FF">
@@ -69,6 +69,7 @@
 	<style name="Títulos" hTextAlign="Center" fontName="DejaVu" fontSize="10" isBold="true"/>
 	<style name="Descrição" hTextAlign="Center" fontName="DejaVu" fontSize="10"/>
 	<style name="Rodapé" fontName="DejaVu" fontSize="10"/>
+	<style name="Texto Dinâmico" fontName="DejaVu" fontSize="10"/>
 	<subDataset name="DatasetErros" uuid="e7a23821-fdd6-48ac-a366-86925c92a060">
 		<property name="com.jaspersoft.studio.data.defaultdataadapter" value="One Empty Record"/>
 		<queryString>
@@ -108,11 +109,12 @@
 			<fieldDescription><![CDATA[motivo]]></fieldDescription>
 		</field>
 	</subDataset>
-	<parameter name="PAR_LOGO" class="java.awt.image.BufferedImage"/>
-	<parameter name="PAR_TIPO_RESULTADO" class="java.lang.String"/>
 	<parameter name="PAR_CABECALHO" class="java.lang.String"/>
+	<parameter name="PAR_DATA_PUBLICACAO" class="java.time.LocalDate"/>
+	<parameter name="PAR_LOGO" class="java.awt.image.BufferedImage"/>
 	<parameter name="PAR_LISTA_ERROS" class="java.util.ArrayList"/>
 	<parameter name="PAR_LISTA_RETORNOS" class="java.util.ArrayList"/>
+	<parameter name="PAR_TIPO_RESULTADO" class="java.lang.String"/>
 	<queryString>
 		<![CDATA[]]>
 	</queryString>
@@ -274,7 +276,7 @@
 								<textField>
 									<reportElement style="Corpo Tabela (Centro)" x="0" y="0" width="85" height="20" uuid="dfac6169-bc8e-4b06-baf8-0a2174c43eed"/>
 									<textElement verticalAlignment="Middle"/>
-									<textFieldExpression><![CDATA[($F{situacao} == 'S') ? $F{NISOculto} : $F{NIS}]]></textFieldExpression>
+									<textFieldExpression><![CDATA[$F{NISOculto}]]></textFieldExpression>
 								</textField>
 							</jr:detailCell>
 						</jr:column>
@@ -368,4 +370,37 @@
 			</textField>
 		</band>
 	</pageFooter>
+	<lastPageFooter>
+		<band height="60">
+			<property name="com.jaspersoft.studio.unit.height" value="px"/>
+			<textField>
+				<reportElement style="Texto Dinâmico" positionType="Float" x="0" y="5" width="555" height="30" uuid="5ba104bc-f816-41ce-b0b9-0ace84b23c08">
+					<property name="com.jaspersoft.studio.unit.y" value="px"/>
+					<property name="com.jaspersoft.studio.unit.x" value="px"/>
+					<property name="com.jaspersoft.studio.unit.width" value="px"/>
+					<property name="com.jaspersoft.studio.unit.height" value="px"/>
+				</reportElement>
+				<textElement textAlignment="Center" markup="html">
+					<font size="10"/>
+				</textElement>
+				<textFieldExpression><![CDATA["Manaus-AM, " + java.time.format.DateTimeFormatter.ofPattern("dd 'de' MMMM 'de' uuuu", new java.util.Locale("pt", "BR")).format($P{PAR_DATA_PUBLICACAO}) + "<br>Comissão Permanente de Concursos - COMPEC"]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement style="Rodapé" x="170" y="45" width="100" height="15" uuid="c90f695f-95eb-4901-ac84-2172328974ba">
+					<property name="com.jaspersoft.studio.unit.height" value="px"/>
+					<property name="com.jaspersoft.studio.unit.y" value="px"/>
+				</reportElement>
+				<textElement textAlignment="Right" verticalAlignment="Bottom"/>
+				<textFieldExpression><![CDATA["Página " + $V{PAGE_NUMBER}]]></textFieldExpression>
+			</textField>
+			<textField evaluationTime="Report">
+				<reportElement style="Rodapé" x="270" y="45" width="100" height="15" uuid="1bfacffc-077e-4c45-a8e2-b416f28bafed">
+					<property name="com.jaspersoft.studio.unit.y" value="px"/>
+					<property name="com.jaspersoft.studio.unit.height" value="px"/>
+				</reportElement>
+				<textElement textAlignment="Left" verticalAlignment="Bottom"/>
+				<textFieldExpression><![CDATA[" de " + $V{PAGE_NUMBER}]]></textFieldExpression>
+			</textField>
+		</band>
+	</lastPageFooter>
 </jasperReport>
