--- a/Relatórios Isensys/Reports/Similaridades.jrxml
+++ b/Relatórios Isensys/Reports/Similaridades.jrxml
@@ -1,4 +1,4 @@
-<!-- Created with Jaspersoft Studio version 7.0.1.final using JasperReports Library version 7.0.1-573496633c2b4074e32f433154b543003f7d2498  -->
+<!-- Created with Jaspersoft Studio version 7.0.2.final using JasperReports Library version 7.0.2-31532122640f516c6d17238ae0e41a08113d5ac0  -->
 <jasperReport name="Similaridades" language="java" pageWidth="595" pageHeight="842" columnWidth="555" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="76669d55-4a61-41a9-891d-c35a9b93080c">
 	<style name="Títulos" hTextAlign="Center" hImageAlign="Center" fontName="DejaVu" fontSize="12.0" bold="true"/>
 	<style name="Table_CH" mode="Opaque" backcolor="#BFE1FF">
@@ -19,8 +19,8 @@
 			<rightPen lineWidth="0.5" lineColor="#000000"/>
 		</box>
 	</style>
-	<style name="Cabeçalho Tabela" hTextAlign="Center" hImageAlign="Center" fontName="DejaVu" fontSize="10.0" bold="true">
-		<box topPadding="3" leftPadding="3" rightPadding="3"/>
+	<style name="Cabeçalho Tabela" hTextAlign="Center" vTextAlign="Middle" fontName="DejaVu" fontSize="10.0" bold="true">
+		<box topPadding="0" leftPadding="0" rightPadding="0"/>
 	</style>
 	<style name="Corpo Tabela (Centro)" hTextAlign="Center" vTextAlign="Middle" hImageAlign="Center" vImageAlign="Middle" blankWhenNull="true" fontName="DejaVu" fontSize="10.0">
 		<box topPadding="0" leftPadding="0" rightPadding="0"/>
@@ -28,8 +28,8 @@
 	<style name="Corpo Tabela (Esquerda)" hTextAlign="Left" vTextAlign="Middle" hImageAlign="Left" vImageAlign="Middle" blankWhenNull="true" fontName="DejaVu" fontSize="10.0">
 		<box topPadding="3" leftPadding="5" bottomPadding="3" rightPadding="3"/>
 	</style>
-	<style name="Texto Dinâmico" fontName="DejaVu" fontSize="10.0"/>
 	<style name="Rodapé" fontName="DejaVu" fontSize="10.0"/>
+	<style name="Texto Dinâmico" fontName="DejaVu" fontSize="10.0"/>
 	<dataset name="DatasetSimilaridade" uuid="c2d44378-feb4-431b-af44-1affb753b995">
 		<property name="com.jaspersoft.studio.data.defaultdataadapter" value="One Empty Record"/>
 		<query language="sql"><![CDATA[]]></query>
@@ -77,7 +77,16 @@
 	</title>
 	<detail>
 		<band height="50" splitType="Stretch">
+			<element kind="staticText" uuid="6ff0dd22-0b0c-4271-8169-a4d9d88e832b" x="0" y="0" width="555" height="50" vTextAlign="Middle" style="Títulos">
+				<printWhenExpression><![CDATA[($P{PAR_LISTA_SIMILARES} == null) || ($P{PAR_LISTA_SIMILARES}.size() == 0)]]></printWhenExpression>
+				<text><![CDATA[Sem dados]]></text>
+				<property name="com.jaspersoft.studio.unit.x" value="px"/>
+				<property name="com.jaspersoft.studio.unit.width" value="px"/>
+				<property name="com.jaspersoft.studio.unit.height" value="px"/>
+				<property name="com.jaspersoft.studio.unit.y" value="px"/>
+			</element>
 			<element kind="component" uuid="5ad62c30-d010-4e9f-9271-202e846a9415" x="0" y="10" width="555" height="40">
+				<printWhenExpression><![CDATA[($P{PAR_LISTA_SIMILARES} != null) && ($P{PAR_LISTA_SIMILARES}.size() > 0)]]></printWhenExpression>
 				<component kind="table">
 					<datasetRun uuid="d4b5cda9-c632-4258-92b5-9261e01e6de2" subDataset="DatasetSimilaridade">
 						<dataSourceExpression><![CDATA[new net.sf.jasperreports.engine.data.JRBeanCollectionDataSource($P{PAR_LISTA_SIMILARES})]]></dataSourceExpression>
@@ -177,13 +186,23 @@
 		</element>
 		<property name="com.jaspersoft.studio.unit.height" value="px"/>
 	</pageFooter>
-	<summary height="20" splitType="Stretch">
-		<element kind="textField" uuid="0e8559c0-0d5c-48fa-9b8e-b819f48f7969" positionType="Float" x="0" y="5" width="555" height="15" markup="html" fontSize="10.0" hTextAlign="Center" style="Texto Dinâmico">
+	<lastPageFooter height="35">
+		<element kind="textField" uuid="ce448df7-956b-43ce-8b54-182e25ff604c" x="170" y="20" width="100" height="15" hTextAlign="Right" vTextAlign="Bottom" style="Rodapé">
+			<expression><![CDATA["Página " + $V{PAGE_NUMBER}]]></expression>
+			<property name="com.jaspersoft.studio.unit.height" value="pixel"/>
+			<property name="com.jaspersoft.studio.unit.y" value="px"/>
+		</element>
+		<element kind="textField" uuid="c707e75e-092f-461a-9e28-022b00f2c9bf" x="270" y="20" width="100" height="15" evaluationTime="Report" hTextAlign="Left" vTextAlign="Bottom" style="Rodapé">
+			<expression><![CDATA[" de " + $V{PAGE_NUMBER}]]></expression>
+			<property name="com.jaspersoft.studio.unit.height" value="pixel"/>
+			<property name="com.jaspersoft.studio.unit.y" value="px"/>
+		</element>
+		<element kind="textField" uuid="dd393a89-1702-4f28-ac1b-d78385906a3f" positionType="Float" x="0" y="5" width="555" height="15" markup="html" fontSize="10.0" hTextAlign="Center" style="Texto Dinâmico">
 			<expression><![CDATA["<b>Documento extraído em: </b>" + new SimpleDateFormat("dd/MM/yyyy '<b>às</b>' HH:mm:ss",new Locale("pt","BR")).format(new java.util.Date())]]></expression>
 			<property name="com.jaspersoft.studio.unit.y" value="px"/>
 			<property name="com.jaspersoft.studio.unit.x" value="px"/>
 			<property name="com.jaspersoft.studio.unit.width" value="px"/>
 		</element>
 		<property name="com.jaspersoft.studio.unit.height" value="px"/>
-	</summary>
+	</lastPageFooter>
 </jasperReport>
